fix: have correct empty pane spacing

--- a/project/parttofe/partto/src/components/DynamicItemSet/DynamicItemSet.module.scss
+++ b/project/parttofe/partto/src/components/DynamicItemSet/DynamicItemSet.module.scss
@@ -14,6 +14,7 @@
 
 @mixin innerContent {
   padding: 16px;
+  width: 100%;
 }
 
 .emptyPage {
